<resources>
    <string name="app_name">CSV Workbook</string>
    <string name="uiTxtFileName">파일 이름</string>
    <string name="uiTxtFileSearch">파일 찾아보기</string>
    <string name="uiTxtStart">시작하기</string>
    <string name="uiExitBtn">종료</string>

    <string name="uiPrevDirectoryBtn">상위로 이동</string>
    <string name="uiNewCsvFileBtn">새로 만들기</string>

    <string name="uiOtherFileSelectItem">다른 파일 선택</string>

    <string name="newCsvFileName">새 CSV파일 -&#160;</string>

    <string name="menuModifyName">이름 변경</string>
    <string name="menuCopyFile">복사</string>
    <string name="menuCutFile">잘라내기</string>
    <string name="menuDeleteFile">삭제</string>

    <string name="alertDialogOK">OK</string>
    <string name="alertDialogCancel">Cancel</string>

    <string name="uiJobProgressTxtView">진행상황 :&#160;</string>

    <string name="uiNoneMemorizeTxtView">못 외운 수 :&#160;</string>
    <string name="uiMemorizeTxtView">외운 수 :&#160;</string>

    <string name="uiMixStartItem">섞어서 다시 시작</string>
    <string name="uiWordStatusInitializeItem">외움/못외움 상태 초기화</string>
    <string name="uiFullSpreadItem">전부 펼쳐보기</string>
    <string name="uiWordInsertItem">새로운 데이터 삽입</string>
    <string name="uiWordDeleteItem">현재 보고 있는 데이터 삭제</string>
    <string name="uiAudioOptionItem">오디오 옵션</string>

    <string name="uiNoneMemorizeBtn">못외움</string>
    <string name="uiMemorizeBtn">외움</string>

    <string name="uiInsertDataDialogTitle">새로운 데이터 삽입하기</string>
    <string name="uiInsertDataDialogViewingWord">보여질 텍스트 :&#160;</string>
    <string name="uiInsertDataDialogHidingWord">감춰질 텍스트 :&#160;</string>
    <string name="uiInsertDataDialogExitBtn">닫기</string>
    <string name="uiInsertDataDialogOKBtn">추가하기</string>

    <string name="menuUpdateWordItem">수정하기</string>

    <string name="menuFindDictionaryItem">사전에서 찾아보기</string>


    <string name="uiAudioOptionTitleTxtView">오디오 옵션</string>
    <string name="uiAudioMuteLabel">음소거 적용&#160;</string>
    <string name="uiAudioSpeedLabel">속도 : &#160;</string>
    <string name="uiAudioOptionApplyBtn">적용</string>
    <string name="uiAudioOptionBasicApplyBtn">기본 값 적용</string>
    <string name="uiAudioOptionExitBtn">닫기</string>

</resources>
