<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:text="@string/uiInsertDataDialogTitle"
        android:textSize="20dp">
    </TextView>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uiInsertDataDialogViewingWord">
        </TextView>
        <EditText
            android:id="@+id/insertDataDialogViewingWordEditTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </EditText>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uiInsertDataDialogHidingWord">
        </TextView>
        <EditText
            android:id="@+id/insertDataDialogHidingWordEditTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center">
        <Button
            android:id="@+id/insertDataDialogExitBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uiInsertDataDialogExitBtn">
        </Button>
        <Button
            android:id="@+id/insertDataDialogOKBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uiInsertDataDialogOKBtn">
        </Button>

    </LinearLayout>

</LinearLayout>