<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#FFFFFF"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".FileSelectActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uiTxtFileName"
            android:layout_weight="1"></TextView>

        <TextView
            android:id="@+id/selectedFileNameTxtView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="5"></TextView>

        <Button
            android:id="@+id/fileSearchBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uiTxtFileSearch"
            android:layout_weight="1"></Button>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/activityExitBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uiExitBtn"></Button>

        <Button
            android:id="@+id/workbookStartBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uiTxtStart"></Button>
    </LinearLayout>

</LinearLayout>