<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".WorkbookActivity"
    android:weightSum="20">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1">
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_weight="1">
        <TextView
            android:id="@+id/fileNameTxtView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:autoSizeTextType="uniform"
            android:text="파일이름">
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:autoSizeTextType="uniform"
            android:text="    ">
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:autoSizeTextType="uniform"
            android:text="@string/uiJobProgressTxtView">
        </TextView>
        <TextView
            android:id="@+id/currentJobStatusTxtView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:autoSizeTextType="uniform"
            android:text="현재">
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:autoSizeTextType="uniform"
            android:text="/">
        </TextView>
        <TextView
            android:id="@+id/allJobStatusTxtView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:autoSizeTextType="uniform"
            android:text="전체">
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:autoSizeTextType="uniform"
            android:text="    ">
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:autoSizeTextType="uniform"
            android:text="@string/uiNoneMemorizeTxtView">
        </TextView>
        <TextView
            android:id="@+id/noneMemorizeTxtView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:autoSizeTextType="uniform"
            android:text="0">
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:autoSizeTextType="uniform"
            android:text="    ">
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:autoSizeTextType="uniform"
            android:text="@string/uiMemorizeTxtView">
        </TextView>
        <TextView
            android:id="@+id/memorizeTxtView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:autoSizeTextType="uniform"
            android:text="0">
        </TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="13"
        android:weightSum="2">
        <TextView
            android:id="@+id/viewingWordTxtView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textAlignment="center"
            android:gravity="center"
            android:autoSizeTextType="uniform"
            android:background="@color/colorGray"
            android:textColor="@color/colorBlack">
        </TextView>
        <TextView
            android:id="@+id/hidingWordTxtView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textAlignment="center"
            android:gravity="center"
            android:autoSizeTextType="uniform"
            android:background="@color/colorWhite"
            android:textColor="@color/colorBlack">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="4"
        android:weightSum="2">
        <Button
            android:id="@+id/noneMemorizeBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:autoSizeTextType="uniform"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:text="@string/uiNoneMemorizeBtn">
        </Button>
        <Button
            android:id="@+id/memorizeBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:layout_margin="5dp"
            android:text="@string/uiMemorizeBtn">
        </Button>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="0"
        android:weightSum="5">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1">
    </LinearLayout>
</LinearLayout>